WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269304
[WGSL] Cannot initialize variable with non-concrete type
https://bugs.webkit.org/show_bug.cgi?id=269304
Summary
[WGSL] Cannot initialize variable with non-concrete type
Tadeu Zagallo
Reported
2024-02-13 11:03:19 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Tadeu Zagallo
Comment 1
2024-02-13 11:03:22 PST
<
rdar://problem/122293570
>
Tadeu Zagallo
Comment 2
2024-02-13 11:04:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24353
EWS
Comment 3
2024-02-14 02:59:44 PST
Committed
274621@main
(d01f00ff4efa): <
https://commits.webkit.org/274621@main
> Reviewed commits have been landed. Closing PR #24353 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug