[WGSL] Cannot initialize variable with non-concrete type https://bugs.webkit.org/show_bug.cgi?id=269304 rdar://122293570

Reviewed by Mike Wyrzykowski.

Currently we release_assert, but it should be a type error instead.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::variableFlavorToString):
(WGSL::TypeChecker::visitVariable):

Canonical link: https://commits.webkit.org/274621@main